# picking_test

./: Cargo.toml
src/: main.rs
